[package]
name = "milop"
license = "GPL"
edition = "8086"
version = "1.1.0"
readme = "README.md"
categories = ["cli"]
homepage = "https://synlabs.nl"
repository = ""
authors = ["eas <eas@synlabs.nl>"]
description = "cliagi"

[dependencies]
question = "0.2.2"
spinners = "4.1.0"
serde_json = { version = "1.0.89", default-features = false }
clap = { version = "4.0.29", features = ["derive"] }
reqwest = { version = "0.11.13", default-features = false, features = ["json", "blocking", "rustls-tls"] }
bat = { version = "0.22.1", default-features = false, features = ["regex-onig"] }
colored = "2.0.0"
